INTYGFV-15083: Added null check to Synfaltsdefekter in InternalToCertificate.